Correct button alignment

--- a/src/skin/overlay.css
+++ b/src/skin/overlay.css
@@ -7,14 +7,10 @@
   height: 16px;
 }
 
-.webtab > label {
+#webapptabs-controls label {
   display: none;
 }
 
 #webapptabs-create-button {
   list-style-image: url(chrome://webapptabs/skin/chalkwork/add.png);
-}
-
-#webapptabs-create-button > label {
-  display: none;
 }
